# charon

./: CMakeLists.txt  LICENSE  README.md
example/: acas_robustness.bmk  acas_xu_1_1.txt  basic_strategy.txt  training_properties.txt
src/: CMakeLists.txt  bayesian_opt.cpp  evaluate.cpp  interface.py  interval.cpp  interval.hpp  network.cpp  network.hpp  powerset.cpp  powerset.hpp  run_charon.cpp  strategy.cpp  strategy.hpp  submission_strategy  utils.hpp
