cmake_minimum_required(VERSION 3.5)

execute_process(COMMAND python2.7-config --cflags OUTPUT_VARIABLE PY_C_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python2.7-config --ldflags OUTPUT_VARIABLE PY_LD_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)

find_package(OpenMP REQUIRED)

set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "-O0 -g -Wall")
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -fsanitize=address ${PY_C_FLAGS}")
#set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall ${PY_C_FLAGS}")
#set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -Wall -pg ${PY_C_FLAGS}")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall ${PY_C_FLAGS}")

set(CMAKE_EXE_LINKER_FLAGS "-fsanitize=address ${PY_LD_FLAGS}")
#set(CMAKE_EXE_LINKER_FLAGS "${PY_LD_FLAGS}")

#set(LOCAL_INCLUDE /work/05940/spailoor/include)
#set(LOCAL_LIB /work/05940/spailoor/lib)
#set(LOCAL_BAYES_INCLUDE /work/05940/spailoor/lib/bayesopt/include)
#set(LOCAL_BAYES_LIB /work/05940/spailoor/lib/bayesopt/lib)

#set(LOCAL_INCLUDE /home/greg/include)
#set(LOCAL_LIB /home/greg/lib)
#set(LOCAL_BAYES_INCLUDE /home/greg/include)
#set(LOCAL_BAYES_LIB /home/greg/lib)
#set(RELUPLEX_HOME /home/shankara/ReluplexCav2017)
#set(RELUPLEX_HOME /home/ganderso/Documents/ReluplexCav2017)

set(LOCAL_INCLUDE /home/spailoor/libs/include)
set(LOCAL_LIB /home/spailoor/libs/lib)
set(LOCAL_BAYES_INCLUDE /home/spailoor/libs/include)
set(LOCAL_BAYES_LIB /home/spailoor/libs/lib)
set(RELUPLEX_HOME /home/shankara/ReluplexCav2017)

link_directories(${LOCAL_LIB} ${LOCAL_BAYES_LIB} /home/greg/gcc-build/install/lib64 /usr/lib/python2.7/config-x86_64-linux-gnu)

add_library(cegar_net network.cpp powerset.cpp interval.cpp)
if (TACC)
  target_include_directories(cegar_net PRIVATE ../eigen ${LOCAL_INCLUDE} /opt/apps/gcc/5.4.0/include/)
else(TACC)
  target_include_directories(cegar_net PRIVATE ../eigen ${LOCAL_INCLUDE})
endif(TACC)

add_executable(learn bayesian_opt.cpp strategy.cpp)
option(TACC "Building for TACC" OFF)
set(CMAKE_CXX_COMPILER mpicxx)
if (TACC)
  add_definitions(-DTACC)
  target_include_directories(learn PRIVATE /opt/apps/gcc/5.4.0/include/ ${LOCAL_INCLUDE} ../eigen /usr/include/python2.7 /usr/include/x86_64-linux-gnu/python2.7 ${LOCAL_BAYES_INCLUDE})
else(TACC)
  target_include_directories(learn PRIVATE ${LOCAL_INCLUDE} ../eigen /usr/include/python2.7 /usr/include/x86_64-linux-gnu/python2.7 ${LOCAL_BAYES_INCLUDE})
endif(TACC)
target_link_libraries(learn cegar_net bayesopt nlopt gmp mpfr zonotope elinaux python2.7 pthread dl util m gomp)

add_executable(evaluate evaluate.cpp strategy.cpp)
option(TACC "Building for TACC" OFF)
set(CMAKE_CXX_COMPILER mpicxx)
if (TACC)
  add_definitions(-DTACC)
endif(TACC)
target_include_directories(evaluate PRIVATE ../eigen ${LOCAL_INCLUDE} /usr/include/python2.7 /usr/include/x86_64-linux-gnu/python2.7)
target_link_libraries(evaluate cegar_net gmp mpfr zonotope pthread elinaux python2.7)
#target_link_libraries(evaluate cegar_net gmp mpfr optpoly pthread elinaux python2.7)
#target_link_libraries(evaluate cegar_net gmp mpfr optoct zonotope pthread elinaux python2.7)

set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -Wall -pg")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")

